This file presents the major changes of each version, focusing on
user-visible changes while the day to day changes are in the git logs.

=======================================================================

        ___  _____ ____
__   __/ _ \|___  |___ \
\ \ / / | | |  / /  __) |         (unamed)
 \ V /| |_| | / /  / __/
  \_/  \___(_)_/  |_____|         (unreleased)

Documentation:
 * Fix typos (GitHub's #478) [Marco Ciampa & Helge Kreutzmann]

=======================================================================
        ___  _____ _
__   __/ _ \|___  / |
\ \ / / | | |  / /| |             Happy leap day
 \ V /| |_| | / / | |
  \_/  \___(_)_/  |_|             (released on 2024/02/29)

po4a main script:
 * Fix the parsing of nested simple and double quotes mixed with escaped
   spaces (GitHub's #475) [Mt].
 * Properly parse config files iteratively redefining the same alias to 
   enrich it (GitHub's #477) [Mt].
 * Don't eat up quotes around parameters containing spaces, as they are needed
   later on when passing parameters to msgmerge and friends (GitHub's #455)
   [gemmaro].

Gemtext:
 * New module (GitHub's #466) [gemmaro].

Documentation:
 * Fix many typos introduced in previous release [Golubev Alexander
   and Rafael Fontenelle].

General:
 * Better error messages on encoding errors. It remains fragile, but at least we 
   try to display an error message (also GitHub's #477) [Mt].

Translations:
 * Updated: Chinese (simplified), thanks Wenbin Lv.
 * Updated: Esperanto, thanks Marco Ciampa.
 * Updated: French, thanks brandelune.
 * Updated: German, thanks Helge Kreutzmann.
 * Updated: Italian, thanks Marco Ciampa.
 * Updated: Japanese, thanks gemmaro.
 * Updated: Norwegian Bokmål, thanks Petter Reinholdtsen.
 * Updated: Portuguese (Brazil), thanks Rafael Fontenelle.
 * Updated: Russian, thanks Golubev Alexander.
 * Updated: Spanish, thanks gallegonovato.
 * Updated: Ukrainian, thanks Yuri Chornoivan (українська) and Сергій.
