@@ -1,4 +1,5 @@
 NOT creating modifiers.pot as requested (--no-update).
+NOT updating the POT file modifiers.pot as requested (--no-update).
 with-1 is 100% translated (2 strings).
 without-2 is 100% translated (2 strings).
 without-3 is 100% translated (2 strings).
