@@ -1,4 +1,5 @@
 NOT creating args.pot as requested (--no-update).
+NOT updating the POT file args.pot as requested (--no-update).
 man.de.1 is 20% translated (1 of 5 strings).
 man.es.1 is 60% translated (3 of 5 strings).
 man.fr.1 is 80% translated (4 of 5 strings).
