@@ -1,4 +1,5 @@
 NOT creating args.pot as requested (--no-update).
+NOT updating the POT file args.pot as requested (--no-update).
 Discard man.de.1 (1 of 5 strings; only 20% translated; need 100%).
 Discard man.es.1 (3 of 5 strings; only 60% translated; need 100%).
 Discard man.fr.1 (4 of 5 strings; only 80% translated; need 100%).
