@@ -1,4 +1,5 @@
 NOT updating multiple.pot as requested (--no-update).
+NOT updating the POT file multiple.pot as requested (--no-update).
 Discard multiple.man.de.1 (3 of 4 strings; only 75% translated; need 80%).
 Discard multiple.man.es.1 (3 of 4 strings; only 75% translated; need 80%).
 Discard multiple.man.fr.1 (3 of 4 strings; only 75% translated; need 80%).
