@@ -1,4 +1,5 @@
 NOT updating multiple.pot as requested (--no-update).
+NOT updating the POT file multiple.pot as requested (--no-update).
 PO file multiple.de.po for language de is missing -- skipping.
 PO file multiple.es.po for language es is missing -- skipping.
 PO file multiple.fr.po for language fr is missing -- skipping.
