@@ -1,0 +1,5 @@
+Document multiple.man.1 kept for update (--translate-only).
+Languages skipped because of --translate-only: fr it; kept languages: de es.
+NOT updating the POT file multiple.pot because of --translate-only.
+multiple.man.de.1 is 100% translated (4 strings).
+multiple.man.es.1 is 100% translated (4 strings).
