@@ -1,2 +1,3 @@
 NOT updating single-fuzzied-noup.pot as requested (--no-update).
+NOT updating the POT file single-fuzzied-noup.pot as requested (--no-update).
 Discard single-fuzzied-noup.man.fr.1 (3 of 4 strings; only 75% translated; need 80%).
