@@ -1,2 +1,3 @@
 NOT updating single.pot as requested (--no-update).
+NOT updating the POT file single.pot as requested (--no-update).
 PO file single.fr.po for language fr is missing -- skipping.
