@@ -9,6 +9,9 @@ __   __/ _ \|___  |___ \
  \ V /| |_| | / /  / __/
   \_/  \___(_)_/  |_____|         (unreleased)
 
+po4a main script:
+ * Fix the behavior of --translate-only (GitHub's #482) [Mt & Golubev Alexander].
+
 Documentation:
  * Fix typos (GitHub's #478) [Marco Ciampa & Helge Kreutzmann]
 
